# RockPaperScissor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.hpp.in  main.cpp  makefile
.github/workflows/: cmake-multi-platform.yml  debiandeploy.yml  redhatdeploy.yml  win64deploy.yml
